@@ -1,5 +1,5 @@
 Package: minfi
-Version: 1.18.2
+Version: 1.18.3
 Title: Analyze Illumina's methylation arrays
 Description: Tools for analyzing and visualizing Illumina's methylation array data.
 Authors@R: c(person(c("Kasper", "Daniel"), "Hansen", role = c("cre", "aut"),
